--- a/src/main/resources/templates/admin-categories.html
+++ b/src/main/resources/templates/admin-categories.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" th:href="@{/css/navbar.css}">
         <link rel="stylesheet" th:href="@{/css/home.css}">
     </head>
-    <body>
+    <header>
         <div th:replace="~{/navbar}">Navbar</div>
+    </header>
+    <body>
         <aside>
             <ul>
                 <li>
@@ -44,36 +46,46 @@
                 <input type="hidden" th:field="*{base.role}" />
             </form>
 
-            <div class="products" th:if="${#lists.isEmpty(model.categories())}">
-                Категории не найдены
-            </div>
-
-            <div class="products" th:if="${not #lists.isEmpty(model.categories())}">
-                <div class="card" th:each="category : ${model.categories()}">
-                    <h2 th:text="'Название: ' + ${category.name()}">Название Категории</h2>
-                    <h4 th:text="'Скидка по категории: ' + ${category.discount()} + '%'">Скидка по категории</h4>
-                    <div>
-                        <a>Редактировать</a>
-                        <a onclick="return confirm('Вы уверены, что хотите удалить продукт?');">Удалить</a>
-                    </div>
-                </div>
-
-                <div class="pages" th:if="${model.base().totalPages() > 1}">
-                    <ul class="pages-ul">
-                        <li
-                                th:each="pageNumber : ${#numbers.sequence(1, model.base().totalPages())}"
-                                th:classappend="${pageNumber == form.pages.page()} ? 'active'">
-                            <a class="page-picker"
-                               th:href="@{/home/admin/categories(
+            <div class="pages" th:if="${model.base().totalPages() > 1}">
+                <ul class="pages-ul">
+                    <li
+                            th:each="pageNumber : ${#numbers.sequence(1, model.base().totalPages())}"
+                            th:classappend="${pageNumber == form.pages.page()} ? 'active'">
+                        <a class="page-picker"
+                           th:href="@{/home/admin/categories(
                              base.userName=${form.base.userName()},
                              base.role=${form.base.role()},
                              pages.page=${pageNumber},
                              pages.size=${form.pages.size()},
                              pages.substring=${form.pages.substring()}
                          )}"
-                               th:text="${pageNumber}">1</a>
-                        </li>
-                    </ul>
+                           th:text="${pageNumber}">1</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="products" th:if="${#lists.isEmpty(model.categories())}">
+                Категории не найдены
+            </div>
+
+            <div class="products" th:if="${not #lists.isEmpty(model.categories())}">
+                <div class="cards">
+                    <div class="card" th:each="category : ${model.categories()}">
+                        <h2 th:text="'Название: ' + ${category.name()}">Название Категории</h2>
+                        <h4 th:text="'Скидка по категории: ' + ${category.discount()} + '%'">Скидка по категории</h4>
+                        <form class="search" th:action="@{/products/{categoryId}/set-discount(categoryId=${category.id()})}"
+                              th:method="post"
+                              th:object="${discount}">
+                            <input class="small-input" type="number" min="0" max="100" th:field="*{discount}" placeholder="Скидка">
+                            <input type="hidden" th:field="*{base.userName}" />
+                            <input type="hidden" th:field="*{base.role}" />
+                            <button type="submit">Применить</button>
+                        </form>
+                        <div class="margin-top">
+                            <a>Редактировать</a>
+                            <a onclick="return confirm('Вы уверены, что хотите удалить продукт?');">Удалить</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
