--- a/src/main/resources/templates/admin-products.html
+++ b/src/main/resources/templates/admin-products.html
@@ -1,83 +1,70 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
-<head>
-  <meta charset="UTF-8">
-  <title>Админ продукты</title>
-  <link rel="stylesheet" th:href="@{/css/navbar.css}">
-  <link rel="stylesheet" th:href="@{/css/home.css}">
-</head>
-<body>
-  <div th:replace="~{/navbar}">Navbar</div>
-  <aside>
-    <ul>
-      <li>
-        <a th:href="@{/home/admin/warehouses(
-                     base.userName=${form.base.userName()},
-                     base.role=${form.base.role()})}">Все склады</a>
-      </li>
-      <li>
-        <a class="active-button" th:href="@{/home/admin/products(
-                     base.userName=${form.base.userName()},
-                     priceSort=true,
-                     base.role=${form.base.role()})}">Каталог товаров</a>
-      </li>
-      <li>
-        <a th:href="@{/home/admin/categories(
-                     base.userName=${form.base.userName()},
-                     base.role=${form.base.role()})}">Категории</a>
-      </li>
-    </ul>
-  </aside>
-  <main>
-      <form th:action="@{/home/admin/products}"
-            th:method="get"
-            th:object="${form}">
-        <div class="search">
-          <input type="text"
-                 th:field="*{pages.substring}"
-                 placeholder="Поиск товара по названию"/>
-          <div class="filters">
-            <select th:field="*{category}">
-              <option value="" disabled>Выберите категорию</option>
-              <option value="Все" selected>Все</option>
-              <option th:each="category: ${model.categories}"
-                      th:value="${category}"
-                      th:text="${category}">
-              </option>
-            </select>
-            <div class="sorting">
-              <lable>
-                <input th:field="*{priceSort}" type="radio" value="true">
-                Сначала дешевле
-              </lable>
-              <lable>
-                <input th:field="*{priceSort}" type="radio" value="false">
-                Сначала дороже
-              </lable>
+  <head>
+    <meta charset="UTF-8">
+    <title>Админ продукты</title>
+    <link rel="stylesheet" th:href="@{/css/navbar.css}">
+    <link rel="stylesheet" th:href="@{/css/home.css}">
+  </head>
+  <header>
+    <div th:replace="~{/navbar}">Navbar</div>
+  </header>
+  <body>
+    <aside>
+      <ul>
+        <li>
+          <a th:href="@{/home/admin/warehouses(
+                       base.userName=${form.base.userName()},
+                       base.role=${form.base.role()})}">Все склады</a>
+        </li>
+        <li>
+          <a class="active-button" th:href="@{/home/admin/products(
+                       base.userName=${form.base.userName()},
+                       priceSort=true,
+                       base.role=${form.base.role()})}">Каталог товаров</a>
+        </li>
+        <li>
+          <a th:href="@{/home/admin/categories(
+                       base.userName=${form.base.userName()},
+                       base.role=${form.base.role()})}">Категории</a>
+        </li>
+      </ul>
+    </aside>
+    <main>
+        <form th:action="@{/home/admin/products}"
+              th:method="get"
+              th:object="${form}">
+          <div class="search">
+            <input type="text"
+                   th:field="*{pages.substring}"
+                   placeholder="Поиск товара по названию"/>
+            <div class="filters">
+              <select th:field="*{category}">
+                <option value="" disabled>Выберите категорию</option>
+                <option value="Все" selected>Все</option>
+                <option th:each="category: ${model.categories}"
+                        th:value="${category}"
+                        th:text="${category}">
+                </option>
+              </select>
+              <div class="sorting">
+                <lable>
+                  <input th:field="*{priceSort}" type="radio" value="true">
+                  Сначала дешевле
+                </lable>
+                <lable>
+                  <input th:field="*{priceSort}" type="radio" value="false">
+                  Сначала дороже
+                </lable>
+              </div>
             </div>
+            <button type="submit">Поиск</button>
           </div>
-          <button type="submit">Поиск</button>
-        </div>
-        <input type="hidden" th:field="*{pages.page}" />
-        <input type="hidden" th:field="*{pages.size}" />
-        <input type="hidden" th:field="*{base.userName}" />
-        <input type="hidden" th:field="*{base.role}" />
-      </form>
-
-      <div class="products" th:if="${#lists.isEmpty(model.products())}">
-        Продукты не найдены
-      </div>
-
-      <div class="products" th:if="${not #lists.isEmpty(model.products())}">
-        <div class="card" th:each="product : ${model.products()}">
-          <h2 th:text="'Название: ' + ${product.name()}">Название Товара</h2>
-          <h4 th:text="'Категория: ' + ${product.category()}">Категория</h4>
-          <h4 th:text="'Стоимость: ' + ${product.price()}">Стоимость</h4>
-          <div>
-            <a>Редактировать</a>
-            <a onclick="return confirm('Вы уверены, что хотите удалить продукт?');">Удалить</a>
-          </div>
-        </div>
+          <input type="hidden" th:field="*{pages.page}" />
+          <input type="hidden" th:field="*{pages.size}" />
+          <input type="hidden" th:field="*{base.userName}" />
+          <input type="hidden" th:field="*{base.role}" />
+        </form>
 
         <div class="pages" th:if="${model.base().totalPages() > 1}">
           <ul class="pages-ul">
@@ -86,19 +73,48 @@
                     th:classappend="${pageNumber == form.pages.page()} ? 'active'">
               <a class="page-picker"
                  th:href="@{/home/admin/products(
-                     base.userName=${form.base.userName()},
-                     base.role=${form.base.role()},
-                     category=${form.category()},
-                     priceSort=${form.priceSort()},
-                     pages.page=${pageNumber},
-                     pages.size=${form.pages.size()},
-                     pages.substring=${form.pages.substring()}
-                 )}"
+                         base.userName=${form.base.userName()},
+                         base.role=${form.base.role()},
+                         category=${form.category()},
+                         priceSort=${form.priceSort()},
+                         pages.page=${pageNumber},
+                         pages.size=${form.pages.size()},
+                         pages.substring=${form.pages.substring()}
+                     )}"
                  th:text="${pageNumber}">1</a>
             </li>
           </ul>
         </div>
-      </div>
-  </main>
-</body>
+
+        <div class="products" th:if="${#lists.isEmpty(model.products())}">
+          Продукты не найдены
+        </div>
+
+        <div class="products" th:if="${not #lists.isEmpty(model.products())}">
+          <div class="cards">
+            <div class="card" th:each="product : ${model.products()}">
+              <h2 th:text="'Название: ' + ${product.name()}">Название Товара</h2>
+              <h4 th:text="'Категория: ' + ${product.category()}">Категория</h4>
+              <h4 class="decorated-text" th:if="${product.price() != product.oldPrice()}"
+                  th:text="'Актуальная цена: ' + ${product.price()}">Актуальная цена</h4>
+              <h4 th:if="${product.price() != product.oldPrice()}"
+                  th:text="'Старая цена: ' + ${product.oldPrice()}">Старая цена</h4>
+              <h4 th:if="${product.price() == product.oldPrice()}"
+                  th:text="'Цена: ' + ${product.price()}">Цена</h4>
+              <h4 th:text="'Количество: ' + ${product.quantity()}">Количество</h4>
+              <h4 th:text="'ID: ' + ${product.id()}">ID</h4>
+              <div>
+                <a>Редактировать</a>
+                <a  th:href="@{/products/{id}/delete(
+                    id=${product.id()},
+                    base.userName=${form.base().userName()},
+                    base.role=${form.base().role()}
+                )}"
+                    onclick="return confirm('Вы уверены, что хотите удалить продукт?');">Удалить</a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </main>
+  </body>
 </html>
