--- a/src/main/resources/templates/admin-warehouses.html
+++ b/src/main/resources/templates/admin-warehouses.html
@@ -6,8 +6,10 @@
         <link rel="stylesheet" th:href="@{/css/navbar.css}">
         <link rel="stylesheet" th:href="@{/css/home.css}">
     </head>
-    <body>
+    <header>
         <div th:replace="~{/navbar}">Navbar</div>
+    </header>
+    <body>
         <aside>
             <ul>
                 <li>
@@ -27,6 +29,16 @@
                      base.role=${form.base.role()})}">Категории</a>
                 </li>
             </ul>
+            <form class="create-form" th:action="@{/warehouses/create}"
+                  th:method="post"
+                  th:object="${create}">
+                <h4>Создание склада</h4>
+                <input class="default-input" type="text" th:field="*{name}" placeholder="Название склада">
+                <input class="default-input" type="text" th:field="*{location}" placeholder="Локация" >
+                <input type="hidden" th:field="*{base.userName}"/>
+                <input type="hidden" th:field="*{base.role}" />
+                <button type="submit">Создать</button>
+            </form>
         </aside>
         <main>
             <form th:action="@{/home/admin/warehouses}"
@@ -44,37 +56,47 @@
                 </div>
             </form>
 
-            <div class="products" th:if="${#lists.isEmpty(model)}">
-                Склады не найдены
-            </div>
-
-            <div class="products" th:if="${not #lists.isEmpty(model.warehouses())}">
-                <div class="card" th:each="warehouse : ${model.warehouses()}">
-                    <h2 th:text="'Название: ' + ${warehouse.name()}">Название склада</h2>
-                    <h4 th:text="'Локация: ' + ${warehouse.location()}">Локация</h4>
-                    <div>
-                        <form th:action=""></form>
-                        <a>Редактировать</a>
-                        <a onclick="return confirm('Вы уверены, что хотите удалить склад?');">Удалить</a>
-                    </div>
-                </div>
-
-                <div class="pages" th:if="${model.base().totalPages() > 1}">
-                    <ul class="pages-ul">
-                        <li
-                                th:each="pageNumber : ${#numbers.sequence(1, model.base().totalPages())}"
-                                th:classappend="${pageNumber == form.pages().page()} ? 'active'">
-                            <a class="page-picker"
-                               th:href="@{/home/admin/warehouses(
+            <div class="pages" th:if="${model.base().totalPages() > 1}">
+                <ul class="pages-ul">
+                    <li
+                        th:each="pageNumber : ${#numbers.sequence(1, model.base().totalPages())}"
+                        th:classappend="${pageNumber == form.pages().page()} ? 'active'">
+                        <a class="page-picker"
+                           th:href="@{/home/admin/warehouses(
                                        base.userName=${form.base().userName()},
                                        base.role=${form.base().role()},
                                        pages.page=${pageNumber},
                                        pages.size=${form.pages().size()},
                                        pages.substring=${form.pages().substring()}
                                )}"
-                               th:text="${pageNumber}">1</a>
-                        </li>
-                    </ul>
+                           th:text="${pageNumber}">1</a>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="products" th:if="${#lists.isEmpty(model)}">
+                Склады не найдены
+            </div>
+
+            <div class="products" th:if="${not #lists.isEmpty(model.warehouses())}">
+                <div class="cards">
+                    <div class="card" th:each="warehouse : ${model.warehouses()}">
+                        <h2 th:text="'Название: ' + ${warehouse.name()}">Название склада</h2>
+                        <h4 th:text="'Локация: ' + ${warehouse.location()}">Локация</h4>
+                        <h4 th:text="'ID: ' + ${warehouse.id()}">ID</h4>
+                        <div>
+                            <a th:href="@{/warehouses/{warehouseId}/manage(
+                                warehouseId=${warehouse.id},
+                                priceSort=true,
+                                base.userName=${form.base().userName()},
+                                base.role=${form.base().role()})}">Редактировать</a>
+                            <a  th:href="@{/warehouses/{warehouseId}/delete(
+                                warehouseId=${warehouse.id},
+                                base.userName=${form.base().userName()},
+                                base.role=${form.base().role()})}"
+                                onclick="return confirm('Вы уверены, что хотите удалить склад?');">Удалить</a>
+                        </div>
+                    </div>
                 </div>
             </div>
         </main>
