--- a/src/main/resources/templates/admin-products.html
+++ b/src/main/resources/templates/admin-products.html
@@ -29,6 +29,17 @@
                        base.role=${form.base.role()})}">Категории</a>
         </li>
       </ul>
+      <form class="standard-form" th:action="@{/catalog/products/create}"
+            th:method="post"
+            th:object="${createProduct}">
+        <h4>Создание продукта</h4>
+        <input class="default-input" type="text" th:field="*{name}" placeholder="Название товара">
+        <input class="default-input" type="text" th:field="*{category}" placeholder="Категория">
+        <input class="default-input" type="number" min="0" th:field="*{price}" placeholder="Цена" >
+        <input type="hidden" th:field="*{base.userName}"/>
+        <input type="hidden" th:field="*{base.role}" />
+        <button type="submit">Создать</button>
+      </form>
     </aside>
     <main>
         <form th:action="@{/home/admin/products}"
@@ -102,13 +113,20 @@
               <h4 th:if="${product.price() == product.oldPrice()}"
                   th:text="'Цена: ' + ${product.price()}">Цена</h4>
               <h4 th:text="'Количество: ' + ${product.quantity()}">Количество</h4>
-              <h4 th:text="'ID: ' + ${product.id()}">ID</h4>
+              <!--<h4 th:text="'ID: ' + ${product.id()}">ID</h4>-->
               <div>
-                <a>Редактировать</a>
-                <a  th:href="@{/products/{id}/delete(
+                <a th:href="@{/catalog/products/{id}/edit(
+                            id=${product.id()},
+                            name=${product.name()},
+                            category=${product.category},
+                            price=${product.price},
+                            base.userName=${form.base.userName()},
+                            base.role=${form.base.role()}
+                            )}">Редактировать</a>
+                <a  th:href="@{/catalog/products/{id}/delete(
                     id=${product.id()},
-                    base.userName=${form.base().userName()},
-                    base.role=${form.base().role()}
+                    userName=${form.base().userName()},
+                    role=${form.base().role()}
                 )}"
                     onclick="return confirm('Вы уверены, что хотите удалить продукт?');">Удалить</a>
               </div>
