--- a/src/main/resources/static/css/home.css
+++ b/src/main/resources/static/css/home.css
@@ -17,7 +17,6 @@ main {
 .center-div {
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
 .standard-form {
@@ -175,11 +174,11 @@ button .active-button {
     margin-right: 10px;
     cursor: pointer;
     padding: 5px;
-    color: #444;
+    color: #555;
 }
 
 .card a:hover {
-    background-color: #444;
+    background-color: #555;
     color: white;
     border: none;
     border-radius: 0.5em;
@@ -188,9 +187,27 @@ button .active-button {
 }
 
 .long-button {
+    margin: 0;
+    color: #555;
+    width: 100%;
+    height: 100%;
+    padding: 5px;
+    font-size: 18px;
+    background: white;
+    border-radius: 0.5em;
+}
+
+.long-button:hover {
+    color: white;
+    background-color: #555;
+    transition: background-color 0.3s;
+}
+
+.add-product form {
     display: flex;
+    flex-direction: row;
     justify-content: center;
-    font-size: 20px;
+    align-items: center;
 }
 
 .page-picker {
@@ -206,7 +223,7 @@ button .active-button {
 }
 
 .page-picker:hover {
-    background-color: #444;
+    background-color: #555;
 }
 
 .pages-ul {
@@ -227,6 +244,7 @@ button .active-button {
 
 .cards {
     display: grid;
+    margin-top: 16px;
     width: 100%;
     grid-template-columns: repeat(auto-fill, 310px);
     column-gap: 40px;
@@ -245,4 +263,3 @@ button .active-button {
     text-decoration: underline;
     color: crimson;
 }
-
