--- a/src/main/resources/templates/admin-categories.html
+++ b/src/main/resources/templates/admin-categories.html
@@ -15,17 +15,20 @@
                 <li>
                     <a th:href="@{/home/admin/warehouses(
                              base.userName=${form.base.userName()},
+                             base.id=${form.base.id()},
                              base.role=${form.base.role()})}">Все склады</a>
                 </li>
                 <li>
                     <a th:href="@{/home/admin/products(
                              base.userName=${form.base.userName()},
                              priceSort=true,
+                             base.id=${form.base.id()},
                              base.role=${form.base.role()})}">Каталог товаров</a>
                 </li>
                 <li>
                     <a class="active-button" th:href="@{/home/admin/categories(
                              base.userName=${form.base.userName()},
+                             base.id=${form.base.id()},
                              base.role=${form.base.role()})}">Категории</a>
                 </li>
             </ul>
@@ -37,6 +40,7 @@
                 <input class="default-input" type="text" th:field="*{discount}" placeholder="Скидка" >
                 <input type="hidden" th:field="*{base.userName}"/>
                 <input type="hidden" th:field="*{base.role}" />
+                <input type="hidden" th:field="*{base.id}" />
                 <button type="submit">Создать</button>
             </form>
         </aside>
@@ -54,6 +58,7 @@
                 <input type="hidden" th:field="*{pages.size}" />
                 <input type="hidden" th:field="*{base.userName}" />
                 <input type="hidden" th:field="*{base.role}" />
+                <input type="hidden" th:field="*{base.id}" />
             </form>
 
             <div class="pages" th:if="${model.base().totalPages() > 1}">
@@ -64,6 +69,7 @@
                         <a class="page-picker"
                            th:href="@{/home/admin/categories(
                              base.userName=${form.base.userName()},
+                             base.id=${form.base.id()},
                              base.role=${form.base.role()},
                              pages.page=${pageNumber},
                              pages.size=${form.pages.size()},
@@ -74,33 +80,33 @@
                 </ul>
             </div>
 
-            <div class="products" th:if="${#lists.isEmpty(model.categories())}">
+            <div class="cards" th:if="${#lists.isEmpty(model.categories())}">
                 Категории не найдены
             </div>
 
-            <div class="products" th:if="${not #lists.isEmpty(model.categories())}">
-                <div class="cards">
-                    <div class="card" th:each="category : ${model.categories()}">
-                        <h2 th:text="'Название: ' + ${category.name()}">Название Категории</h2>
-                        <h4 th:text="'Скидка по категории: ' + ${category.discount()} + '%'">Скидка по категории</h4>
-                        <form  class="search" th:action="@{/catalog/categories/{categoryId}/edit(categoryId=${category.id()})}"
-                              th:method="post"
-                              th:object="${edit}">
-                            <input class="small-input" type="number" min="0" max="100" th:field="*{discount}" placeholder="Скидка">
-                            <input type="hidden" th:field="*{base.userName}" />
-                            <input type="hidden" th:field="*{base.role}" />
-                            <button type="submit">Применить</button>
-                        </form>
-                        <div class="margin-top">
-                            <a th:href="@{/catalog/categories/{id}/edit(
-                            id=${category.id()},
-                            name=${category.name()},
-                            discount=${category.discount()},
-                            base.userName=${form.base.userName()},
-                            base.role=${form.base.role()}
-                            )}">Редактировать</a>
-                            <a onclick="return confirm('Вы уверены, что хотите удалить категорию?');">Удалить</a>
-                        </div>
+            <div class="cards" th:if="${not #lists.isEmpty(model.categories())}">
+                <div class="card" th:each="category : ${model.categories()}">
+                    <h2 th:text="'Название: ' + ${category.name()}">Название Категории</h2>
+                    <h4 th:text="'Скидка по категории: ' + ${category.discount()} + '%'">Скидка по категории</h4>
+                    <form  class="search" th:action="@{/catalog/categories/{categoryId}/edit(categoryId=${category.id()})}"
+                          th:method="post"
+                          th:object="${edit}">
+                        <input class="small-input" type="number" min="0" max="100" th:field="*{discount}" placeholder="Скидка">
+                        <input type="hidden" th:field="*{base.userName}" />
+                        <input type="hidden" th:field="*{base.role}" />
+                        <input type="hidden" th:field="*{base.id}" />
+                        <button type="submit">Применить</button>
+                    </form>
+                    <div class="margin-top">
+                        <a th:href="@{/catalog/categories/{id}/edit(
+                        id=${category.id()},
+                        name=${category.name()},
+                        discount=${category.discount()},
+                        base.userName=${form.base.userName()},
+                        base.id=${form.base.id()},
+                        base.role=${form.base.role()}
+                        )}">Редактировать</a>
+                        <a onclick="return confirm('Вы уверены, что хотите удалить категорию?');">Удалить</a>
                     </div>
                 </div>
             </div>
