--- a/src/main/resources/templates/admin-warehouses.html
+++ b/src/main/resources/templates/admin-warehouses.html
@@ -15,17 +15,20 @@
                 <li>
                     <a class="active-button" th:href="@{/home/admin/warehouses(
                      base.userName=${form.base.userName()},
+                     base.id=${form.base.id()},
                      base.role=${form.base.role()})}">Все склады</a>
                 </li>
                 <li>
                     <a th:href="@{/home/admin/products(
                      base.userName=${form.base.userName()},
                      priceSort=true,
+                     base.id=${form.base.id()},
                      base.role=${form.base.role()})}">Каталог товаров</a>
                 </li>
                 <li>
                     <a th:href="@{/home/admin/categories(
                      base.userName=${form.base.userName()},
+                     base.id=${form.base.id()},
                      base.role=${form.base.role()})}">Категории</a>
                 </li>
             </ul>
@@ -37,6 +40,7 @@
                 <input class="default-input" type="text" th:field="*{location}" placeholder="Локация" >
                 <input type="hidden" th:field="*{base.userName}"/>
                 <input type="hidden" th:field="*{base.role}" />
+                <input type="hidden" th:field="*{base.id}" />
                 <button type="submit">Создать</button>
             </form>
         </aside>
@@ -52,6 +56,7 @@
                     <input type="hidden" th:field="*{pages.size}"/>
                     <input type="hidden" th:field="*{base.userName}"/>
                     <input type="hidden" th:field="*{base.role}" />
+                    <input type="hidden" th:field="*{base.id}" />
                     <button type="submit">Поиск</button>
                 </div>
             </form>
@@ -64,6 +69,7 @@
                         <a class="page-picker"
                            th:href="@{/home/admin/warehouses(
                                        base.userName=${form.base().userName()},
+                                       base.id=${form.base.id()},
                                        base.role=${form.base().role()},
                                        pages.page=${pageNumber},
                                        pages.size=${form.pages().size()},
@@ -78,24 +84,25 @@
                 Склады не найдены
             </div>
 
-            <div class="products" th:if="${not #lists.isEmpty(model.warehouses())}">
-                <div class="cards">
-                    <div class="card" th:each="warehouse : ${model.warehouses()}">
-                        <h2 th:text="'Название: ' + ${warehouse.name()}">Название склада</h2>
-                        <h4 th:text="'Локация: ' + ${warehouse.location()}">Локация</h4>
-                        <h4 th:text="'ID: ' + ${warehouse.id()}">ID</h4>
-                        <div>
-                            <a th:href="@{/warehouses/{warehouseId}/manage(
-                                warehouseId=${warehouse.id},
-                                priceSort=true,
-                                base.userName=${form.base().userName()},
-                                base.role=${form.base().role()})}">Редактировать</a>
-                            <a  th:href="@{/warehouses/{warehouseId}/delete(
-                                warehouseId=${warehouse.id},
-                                userName=${form.base().userName()},
-                                role=${form.base().role()})}"
-                                onclick="return confirm('Вы уверены, что хотите удалить склад?');">Удалить</a>
-                        </div>
+            <div class="cards" th:if="${not #lists.isEmpty(model.warehouses())}">
+                <div class="card" th:each="warehouse : ${model.warehouses()}">
+                    <h2 th:text="'Название: ' + ${warehouse.name()}">Название склада</h2>
+                    <h4 th:text="'Локация: ' + ${warehouse.location()}">Локация</h4>
+                    <h4 th:text="'ID: ' + ${warehouse.id()}">ID</h4>
+                    <div>
+                        <a th:href="@{/warehouses/{warehouseId}/manage(
+                            warehouseId=${warehouse.id},
+                            priceSort=true,
+                            base.userName=${form.base().userName()},
+                            base.id=${form.base.id()},
+                            base.role=${form.base().role()}
+                            )}">Редактировать</a>
+                        <a  th:href="@{/warehouses/{warehouseId}/delete(
+                            warehouseId=${warehouse.id},
+                            userName=${form.base().userName()},
+                            base.id=${form.base.id()},
+                            role=${form.base().role()}
+                            )}" onclick="return confirm('Вы уверены, что хотите удалить склад?');">Удалить</a>
                     </div>
                 </div>
             </div>
