--- a/src/main/resources/templates/home-user.html
+++ b/src/main/resources/templates/home-user.html
@@ -44,6 +44,7 @@
                 <input type="hidden" th:field="*{pages.size}" />
                 <input type="hidden" th:field="*{base.userName}" />
                 <input type="hidden" th:field="*{base.role}" />
+                <input type="hidden" th:field="*{base.id}" />
             </form>
 
             <div class="pages" th:if="${model.base().totalPages() > 1}">
@@ -55,6 +56,7 @@
                            th:href="@{/home/user(
                                     base.userName=${form.base.userName()},
                                     base.role=${form.base.role()},
+                                    base.id=${form.base.id()},
                                     category=${form.category()},
                                     priceSort=${form.priceSort()},
                                     pages.page=${pageNumber},
@@ -66,25 +68,33 @@
                 </ul>
             </div>
 
-            <div class="products" th:if="${#lists.isEmpty(model.products())}">
+            <div class="cards cards-center" th:if="${#lists.isEmpty(model.products())}">
                 Продукты не найдены
             </div>
 
-            <div class="products" th:if="${not #lists.isEmpty(model.products())}">
-                <div class="cards cards-center">
-                    <div class="card" th:each="product : ${model.products()}">
-                        <h2 th:text="'Название: ' + ${product.name()}">Название Товара</h2>
-                        <h4 th:text="'Категория: ' + ${product.category()}">Категория</h4>
-                        <h4 class="decorated-text" th:if="${product.price() != product.oldPrice()}"
-                            th:text="'Актуальная цена: ' + ${product.price()}">Актуальная цена</h4>
-                        <h4 th:if="${product.price() != product.oldPrice()}"
-                            th:text="'Старая цена: ' + ${product.oldPrice()}">Старая цена</h4>
-                        <h4 th:if="${product.price() == product.oldPrice()}"
-                            th:text="'Цена: ' + ${product.price()}">Цена</h4>
-                        <h4 th:text="'Количество: ' + ${product.quantity()}">Количество</h4>
+            <div class="cards cards-center" th:if="${not #lists.isEmpty(model.products())}">
+                <div class="card" th:each="product : ${model.products()}">
+                    <h2 th:text="'Название: ' + ${product.name()}">Название Товара</h2>
+                    <h4 th:text="'Категория: ' + ${product.category()}">Категория</h4>
+                    <h4 class="decorated-text" th:if="${product.price() != product.oldPrice()}"
+                        th:text="'Актуальная цена: ' + ${product.price()}">Актуальная цена</h4>
+                    <h4 th:if="${product.price() != product.oldPrice()}"
+                        th:text="'Старая цена: ' + ${product.oldPrice()}">Старая цена</h4>
+                    <h4 th:if="${product.price() == product.oldPrice()}"
+                        th:text="'Цена: ' + ${product.price()}">Цена</h4>
+                    <h4 th:text="'Количество: ' + ${product.quantity()}">Количество</h4>
 
-                        <a class="long-button">Добавить в корзину</a>
-                    </div>
+                    <form class="add-product"
+                          th:action="@{/cart/user/add-product(
+                                base.id=${form.base().id()},
+                                base.role=${form.base().role()},
+                                base.userName=${form.base().userName()},
+                                productId=${product.id()}
+                                )}"
+                          th:method="post"
+                          th:object="${add}">
+                        <button type="submit" class="long-button">Добавить в корзину</button>
+                    </form>
                 </div>
             </div>
         </main>
