--- a/src/main/resources/templates/navbar.html
+++ b/src/main/resources/templates/navbar.html
@@ -3,21 +3,35 @@
         <li>
             <h2>Warehouse</h2>
         </li>
-        <li th:if="${form.base.role()} == 'admin'">
+        <li th:if="${form.base.role()} == 'ADMIN'">
             <a th:href="@{/home/admin/warehouses(
                      base.userName=${form.base.userName()},
                      base.role=${form.base.role()})}">Главная</a>
         </li>
-        <li th:if="${form.base.role()} == 'user'">
-            <a href="">Каталог</a>
+        <li th:if="${form.base.role()} == 'USER'">
+            <a th:href="@{/home/user(
+                    base.userName=${form.base.userName()},
+                    base.role=${form.base.role()},
+                    base.id=${form.base.id()},
+                    priceSort=true,)}">Каталог</a>
         </li>
-        <li th:if="${form.base.role()} == 'admin'">
+        <li th:if="${form.base.role()} == 'ADMIN'">
             <a href="">Заказы пользователей</a>
         </li>
-        <li>
-            <a href="">Корзина</a>
+        <li><!--th:if="${form.base.countItemsInCart > 0}"-->
+            <a th:if="${form.base.role()} == 'ADMIN'" th:href="@{/cart/admin(
+                        base.id=${form.base.id()},
+                        base.userName=${form.base.userName()},
+                        base.role=${form.base.role()},
+            )}">Корзина <span  th:text="4"></span></a>
+            <a th:if="${form.base.role()} == 'USER'" th:href="@{/cart/user(
+                        base.id=${form.base.id()},
+                        base.userName=${form.base.userName()},
+                        base.role=${form.base.role()},
+                        base.pointsCount=${form.base.pointsCount()}
+            )}">Корзина <span  th:text="4"></span></a>
         </li>
-        <li th:if="${form.base.role()} == 'user'">
+        <li th:if="${form.base.role()} == 'USER'">
             <p th:text="'Количество балов: ' + ${model.pointsCount}"></p>
         </li>
         <li th:text="${form.base.userName()}">UserName</li>
